@@ -61,6 +61,22 @@ public class ResultHandlerTest {
     }
 
     @Test public void
+    supports_using_result_handlers_using_the_response_dsl() {
+        MutableObject<Boolean> mutableObject = new MutableObject<Boolean>(false);
+
+        given().
+                header(new Header("headerName", "John Doe")).
+        when().
+                get("/header").
+        then().
+                apply(print(), customResultHandler(mutableObject)).
+                statusCode(200).
+                body("headerName", equalTo("John Doe"));
+
+        assertThat(mutableObject.getValue(), is(true));
+    }
+
+    @Test public void
     merges_result_handlers_using_the_dsl() {
         MutableObject<Boolean> mutableObject1 = new MutableObject<Boolean>(false);
         MutableObject<Boolean> mutableObject2 = new MutableObject<Boolean>(false);
@@ -109,6 +125,26 @@ public class ResultHandlerTest {
         when().
                 get("/header").
         then().
+                statusCode(200).
+                body("headerName", equalTo("John Doe"));
+
+        assertThat(mutableObject1.getValue(), is(true));
+        assertThat(mutableObject2.getValue(), is(true));
+    }
+
+
+    @Test public void
+    merges_statically_defined_result_handlers_with_dsl_defined_using_response_spec() {
+        MutableObject<Boolean> mutableObject1 = new MutableObject<Boolean>(false);
+        MutableObject<Boolean> mutableObject2 = new MutableObject<Boolean>(false);
+        RestAssuredMockMvc.resultHandlers(customResultHandler(mutableObject1));
+
+        given().
+                header(new Header("headerName", "John Doe")).
+        when().
+                get("/header").
+        then().
+                apply(customResultHandler(mutableObject2)).
                 statusCode(200).
                 body("headerName", equalTo("John Doe"));
 
